# cmake-android-helloworld

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure.sh  main.c  main.cpp
